# AIDigitalPlanner

./: .assetsignore  .gitignore  .netlifyignore  BACKLOG-PROMPTS.md  BACKLOG.md  CLOUDFLARE-AUTO-DEPLOY-SETUP.md  CLOUDFLARE-PAGES-MIGRATION.md  DEMO-GUIDE.md  DEPLOY-BATCH-A.md  DEPLOY-BATCH-B.md  DEPLOY-BATCH-C.md  DEPLOY-BATCH-D.md  DEPLOY-PHASE-12.md  DEPLOY-PHASE-13.1.md  DEPLOY-PHASE-13.md  DEPLOY-PHASE-14a.md  DEPLOY-PHASE-14b.md  DEPLOY-PHASE-15a-15b.md  DEPLOY-PHASE-15c-15d.md  DEPLOY-PHASE-16.md  DEPLOY-PHASE-17.md  DEPLOY-PHASE-18-3-4.md  DEPLOY-PHASE-18.md  DEPLOY-PHASE-19-15e.md  DEPLOY.md  README.md  TEST-REPORT.md  _headers  _redirects  actions.html  admin.html  aidp-auth.js  all-products.html  approvals.html  arch-diagram.html  architecture-studio.html  audit.html  blockchain-rwa.html  cards.html  cefi.html  (+58 more)
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/config/: development.yaml  production.yaml  staging.yaml
backend/docker/: entrypoint.sh  nginx.conf
backend/lib/: .gitkeep
backend/scripts/: generate_mock_data.py
backend/src/di_platform/: __init__.py  __main__.py  config.py
backend/src/di_platform/agents/: __init__.py
backend/src/di_platform/api/: __init__.py
backend/src/di_platform/models/: __init__.py
backend/src/di_platform/services/: __init__.py
backend/src/di_platform/utils/: __init__.py
backend/tests/: conftest.py
backend/tests/fixtures/: mock_discovery_input.json  mock_payments.json  mock_users.json
backend/tests/unit/: test_health.py
(+69 files in other folders)
