[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "di-platform"
version = "0.1.0"
description = "DI-Platform — Time Capsule Discovery Studio & AI Requirements Studio"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nishanth Kumar Kishore", email = "nishanth.kishore@example.com" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["src"]

# ── Black ──────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── isort ──────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

# ── Ruff ───────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "N"]
ignore = ["E501"]

# ── Mypy ───────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

# ── Pytest ─────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: fast isolated tests",
  "integration: tests that hit external services",
]
